# docs-kb-cli

./: README.md  main.py  pyproject.toml  requirements.txt
src/docs_kb/: cli.py  utils.py
src/docs_kb/commands/: ingest.py  list.py  manage.py  query.py  start_mcp.py  sync.py
src/docs_kb/core/: file_loader.py  mindsdb_client.py  models.py
src/docs_kb/mcp_server/: server.py
